# talp-invest-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  graph.py  graph_state.py  main.py
app/config/: settings.py
app/nodes/: audit_log.py  classification.py  evidence_validation.py  input_validation.py  invest_analysis.py  output_validation.py  prompt_loader.py  report_generation.py
app/schemas/: __init__.py  models.py
app/services/: audit_logger.py  evidence_checker.py  heuristic_backend.py  llm_client.py  prompt_registry.py
prompts/: bad_story_report_v1.0.0.yaml  invest_analysis_v1.0.0.yaml
tests/: test_agent_flow.py  test_classification.py  test_guardrails.py  test_settings.py
