[project]
name = "talp-invest-agent"
version = "0.1.0"
description = "Deterministic INVEST analysis agent for user stories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langgraph>=0.2.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
talp-invest-agent = "app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

